@@ -46,11 +46,12 @@ test.write('foo.in', "foo.in\n")
 
 expected_stderr = """scons: \*\*\* \[foo.out\] Exception
 Traceback \((most recent call|innermost) last\):
-  File ".+", line \d+, in \S+
+(  File ".+", line \d+, in \S+
     [^\n]+
-  File ".+", line \d+, in \S+
+)*(  File ".+", line \d+, in \S+
+)*(  File ".+", line \d+, in \S+
     [^\n]+
-  File "SConstruct", line 3, in func
+)*  File "SConstruct", line 3, in func
     raise "func exception"
 func exception
 """
